// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Grid /> renders correctly 1`] = `
<div
  className="sc-bdVaJa eTQPUD"
/>
`;

exports[`<Grid /> renders correctly with gutter 1`] = `
<div
  className="sc-bdVaJa cJdnKI"
/>
`;
